feat: 合并重复 AIProviderFactory 并实现模型路由降级
- 合并 common 中两处重复的 AIProviderFactory 为单一实现
  (保留双方 API 全集, 删除 ai.provider.factory 子包, 更新 9 处引用)
- chat 新增 ModelFailoverService: 主模型调用异常/失败时沿可配置
  降级链自动切换(ai.failover.chains), 支持跨 Provider 按模型路由
- 计费消息改用实际响应的 provider/model 计价(降级后价格正确)
- 回归: 编译 9 模块 SUCCESS, 32 个单测全过