@@ -5,31 +5,48 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import jakarta.annotation.PostConstruct;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 /**
- * AI Provider 工厂
- * 用于管理和获取不同的AI Provider实例
+ * AI Provider 工厂（合并自原 ai.provider 与 ai.provider.factory 两处重复实现）
+ * <p>
+ * 管理和获取不同的 AI Provider 实例：
+ * - 按名称获取（openai/deepseek）
+ * - 按模型ID路由到支持的 Provider（模型智能路由的基础）
  */
 @Slf4j
 @Component
 public class AIProviderFactory {
 
-    private final Map<String, AIProvider> providers = new HashMap<>();
+    private final Map<String, AIProvider> providers = new ConcurrentHashMap<>();
 
     @Autowired
     public AIProviderFactory(List<AIProvider> providerList) {
-        for (AIProvider provider : providerList) {
-            providers.put(provider.getProviderName().toLowerCase(), provider);
-            log.info("Registered AI Provider: {}", provider.getProviderName());
+        if (providerList != null) {
+            for (AIProvider provider : providerList) {
+                registerProvider(provider);
+            }
         }
     }
 
     @PostConstruct
     public void init() {
-        log.info("AI Provider Factory initialized with {} providers", providers.size());
+        log.info("AIProviderFactory initialized with {} providers: {}", providers.size(), providers.keySet());
+    }
+
+    /**
+     * 注册 Provider
+     */
+    public void registerProvider(AIProvider provider) {
+        String providerName = provider.getProviderName().toLowerCase();
+        providers.put(providerName, provider);
+        log.info("Registered AI Provider: {}", providerName);
     }
 
     /**
@@ -46,38 +63,78 @@ public class AIProviderFactory {
     }
 
     /**
-     * 获取默认的Provider（OpenAI）
-     *
-     * @return AIProvider实例
+     * 根据模型ID获取支持的 Provider（模型路由入口）
+     */
+    public AIProvider getProviderByModel(String modelId) {
+        for (AIProvider provider : providers.values()) {
+            if (provider.supportsModel(modelId)) {
+                return provider;
+            }
+        }
+        return null;
+    }
+
+    /**
+     * 获取默认的Provider（优先 OpenAI）
      */
     public AIProvider getDefaultProvider() {
         AIProvider openai = providers.get("openai");
         if (openai != null) {
             return openai;
         }
-        // 返回第一个可用的Provider
         return providers.values().stream().findFirst().orElse(null);
     }
 
     /**
-     * 获取所有可用的Provider名称
-     *
-     * @return Provider名称列表
+     * 获取所有已注册的 Provider
      */
-    public java.util.List<String> getAvailableProviders() {
-        return providers.keySet().stream().toList();
+    public Collection<AIProvider> getAllProviders() {
+        return Collections.unmodifiableCollection(providers.values());
+    }
+
+    /**
+     * 获取所有可用的Provider名称
+     */
+    public List<String> getAvailableProviders() {
+        return providers.keySet().stream().sorted().collect(Collectors.toList());
+    }
+
+    /**
+     * 获取所有支持的模型（模型ID -> Provider名称）
+     */
+    public Map<String, String> getAllSupportedModels() {
+        Map<String, String> models = new HashMap<>();
+        for (AIProvider provider : providers.values()) {
+            for (String model : provider.getSupportedModels()) {
+                models.put(model, provider.getProviderName());
+            }
+        }
+        return models;
+    }
+
+    /**
+     * 移除 Provider
+     */
+    public boolean removeProvider(String providerName) {
+        AIProvider removed = providers.remove(providerName == null ? null : providerName.toLowerCase());
+        if (removed != null) {
+            log.info("Removed AI Provider: {}", providerName);
+            return true;
+        }
+        return false;
     }
 
     /**
      * 检查指定的Provider是否可用
-     *
-     * @param providerName Provider名称
-     * @return 是否可用
      */
     public boolean isProviderAvailable(String providerName) {
-        if (providerName == null) {
-            return false;
-        }
-        return providers.containsKey(providerName.toLowerCase());
+        return hasProvider(providerName);
+    }
+
+    /**
+     * 检查指定的Provider是否已注册
+     */
+    public boolean hasProvider(String providerName) {
+        return providerName != null && providers.containsKey(providerName.toLowerCase());
     }
 }
